<resources>
    <string name="app_name">Герасимов Виталий</string>

    <string name="hint_rating">Рейтинг</string>
    <string name="hint_code_count">Написано строк кода</string>
    <string name="hint_project_count">Проектов</string>

    <string name="hint_phone">Мобильный</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_github">Репозиторий</string>
    <string name="hint_vk">Профиль в VK</string>
    <string name="hint_about_me">О себе</string>
    <string name="text_phone">+7(908)720-92-70</string>
    <string name="text_email">gervit2008@mail.ru</string>
    <string name="text_github">github.com/gervit1989/DevIntensive</string>
    <string name="text_vk">vk.com/gervit</string>
    <string name="text_about_me">Введите информацию о себе. Напишите свои интересы, хобби,
        принципы жизни\n Труляля\n и Траляля\n из Зазеркалья\n и многих \n других чудесных \n владений</string>
    <string name="change_profile_photo_caption">Изменить фото профиля</string>
    <string name="load_photo_menu_cancel">Отмена</string>
    <string name="load_photo_menu_gallery">Загрузить из галереи</string>
    <string name="load_photo_menu_camera">Сделать снимок</string>
    <string name="profile_photo_gallery_caption">Выберите фото</string>
    <string name="txt_mailto">mailto:</string>
    <string name="txt_https">https://</string>
    <string name="hint_password">Пароль</string>
    <string name="text_login">ВОЙТИ</string>
    <string name="remind_pass">Забыли пароль?</string>
    <string name="null_value">0</string>
    <string name="text_code_line_count">Написано строк кода</string>
    <string name="profile_name_string_">Фамилия Имя</string>
    <string name="rating_string">Рейтинг</string>
    <string name="project_string">Проектов</string>
    <string name="hint_search">Поиск</string>
    <string name="choose_browser">Выберите браузер</string>
</resources>
