<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView
            style="@style/text.title"
            android:id="@+id/txt_cap0"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:text=""
            android:background="@color/gray"
            android:shadowColor="@color/gray"
            android:layout_weight="1"/>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle">
            <TextView
                style="@style/text.title"
                android:id="@+id/txt_cap1"
                android:text="@string/hint_rating"
                android:layout_weight="1"/>
            <TextView
                style="@style/text.title"
                android:id="@+id/cap2"
                android:text="@string/hint_code_count"
                android:layout_weight="3"/>
            <TextView
                style="@style/text.title"
                android:id="@+id/txt_cap3"
                android:text="@string/hint_project_count"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            style="@style/text.title"
            android:id="@+id/txt_cap_last"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:text=""
            android:background="@color/gray"
            android:shadowColor="@color/gray"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/mobile_list_item"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/hide_progress"
                style="@style/icon.left"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_call_black_24dp"/>
            <LinearLayout
                style="@style/container">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_phone"
                        style="@style/edit"
                        android:hint="@string/hint_phone"
                        android:inputType="phone"
                        android:text="@string/text_phone" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/call_progress"
                style="@style/icon.right"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/mobile_list_item"
            android:orientation="horizontal">
            <ImageView
                style="@style/icon.left"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_mail_black_24dp"/>
            <LinearLayout
                style="@style/container">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_email"
                        style="@style/edit"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:text="@string/text_email" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/mobile_list_item"
            android:orientation="horizontal">
            <ImageView
                style="@style/icon.left"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_vk"/>
            <LinearLayout
                style="@style/container">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_vk"
                        style="@style/edit"
                        android:hint="@string/hint_vk"
                        android:inputType="textMultiLine"
                        android:text="@string/text_vk" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/c_visibility_black_24dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/icon.left"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_github_circle"/>
            <LinearLayout
                style="@style/container"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_git"
                        style="@style/edit"
                        android:hint="@string/hint_github"
                        android:inputType="textMultiLine"
                        android:text="@string/text_github" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/c_visibility_black_24dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/icon.left"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_account_circle_black_24dp"/>
            <LinearLayout
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_32"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_me"
                        style="@style/edit"
                        android:hint="@string/hint_about_me"
                        android:inputType="textMultiLine"
                        android:text="@string/text_about_me" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/c_visibility_black_24dp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>