<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_coordinator_conteiner"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/user_photo_img1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/profile_image_size"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user_bg"
                        />
                    <TextView
                        android:id="@+id/user_full_name_txt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="@dimen/spacing_medial_24"
                        android:paddingLeft="@dimen/spacing_normal_16"
                        android:paddingRight="@dimen/spacing_normal_16"
                        android:text="@string/profile_name_string_"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/font_size_large_20" />
                </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@color/gray_background">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/rating_txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/null_value"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/font_size_large_20" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_string"
                        android:textColor="@color/color_black"/>
                </LinearLayout>
                <View style="@style/profile_header_divider" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/code_lines_txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/null_value"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/font_size_large_20" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_code_line_count"
                        android:textColor="@color/color_black"/>
                </LinearLayout>
                <View style="@style/profile_header_divider" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/projects_txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/null_value"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/font_size_large_20" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/project_string"
                        android:textColor="@color/color_black"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/marginTopForToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme.PopupOverlay"
                android:titleTextColor="@color/color_white"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/ToolBarStyle">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/static_profile_content" />
</android.support.design.widget.CoordinatorLayout>